<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundoApp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/button_back_recovery_pass"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_back_long"
            android:paddingVertical="13dp"
            android:tint="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_recovery_pass"
            android:textSize="19dp"
            android:fontFamily="@font/roboto"
            android:textColorHighlight="@color/colorBlack"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/info_label_recovery_pass"
        android:fontFamily="@font/roboto"
        android:textSize="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_login_white"
        android:layout_gravity="center"
        android:elevation="1dp"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail"
            android:tint="@color/colorAccent"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/email_recovery_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:hint="Email"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/colorBlack"
            android:fontFamily="@font/roboto"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_recovery_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/label_button_recovery_pass"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/roboto"
        android:textSize="14dp"/>

</LinearLayout>