<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundoApp">

    <LinearLayout
        android:id="@+id/box_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/log_app"
            android:layout_gravity="center"
            android:layout_marginHorizontal="54dp"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_login_white"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person"
                android:tint="@color/colorAccent"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:hint="Email"
                android:textColor="@color/colorBlack"
                android:textColorHighlight="@color/colorBlack"
                android:fontFamily="@font/roboto"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_login_white"
            android:layout_gravity="center"
            android:elevation="1dp"
            android:padding="10dp"
            android:layout_marginHorizontal="40dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_key"
                android:tint="@color/colorAccent"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:hint="Senha"
                android:inputType="textPassword"
                android:textColor="@color/colorBlack"
                android:textColorHighlight="@color/colorBlack"
                android:fontFamily="@font/roboto"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login"
            android:layout_marginVertical="24dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/label_button_login"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/roboto"
            android:textSize="14dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_weight="1"
            android:id="@+id/button_recovery_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingVertical="16dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/ripple_login"
            android:text="@string/recovery_pass_login"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/button_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingVertical="16dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/colorAccent"
            android:background="@drawable/ripple_login"
            android:text="@string/new_account_login"/>

    </LinearLayout>

</RelativeLayout>